kubernetes/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "gateway"
        dapr.io/app-port: "8080"
        dapr.io/log-level: "info"
        dapr.io/sidecar-liveness-probe-period-seconds: "10"
        dapr.io/sidecar-readiness-probe-period-seconds: "10"
    spec:
      containers:
      - name: gateway
        image: ghcr.io/mludeiro/alpha.gateway.service:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: gateway
