kubernetes/postgres-token.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-token-service
spec:
  selector:
    app: postgres-token
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-token
spec:
  serviceName: "postgres"
  replicas: 1  # Dont scale
  selector:
    matchLabels:
      app: postgres-token
  template:
    metadata:
      labels:
        app: postgres-token
    spec:
      containers:
      - name: postgres-token
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
